--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,16 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />-->
-  <title>Bootcamp Dev Blog</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/preflight.min.css" rel="stylesheet">
+
+  <!-- Any of your own CSS would go here -->
+
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/utilities.min.css" rel="stylesheet">
+
+
+  <title>dev X-Tension</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Alegreya|Quicksand" rel="stylesheet">
 </head>
 
 <body>
