--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/utilities.min.css" rel="stylesheet">
 
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>dev X-Tension</title>
 
   <link href="https://fonts.googleapis.com/css?family=Alegreya|Quicksand" rel="stylesheet">
