--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
   <link href="https://fonts.googleapis.com/css?family=Alegreya|Quicksand" rel="stylesheet">
+
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
